pkl-core/src/test/files/LanguageSnippetTests/input/errors/unterminatedUnicodeEscape.pkl
res1 = "foo \u{123 bar"